--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
   dependencies {
     classpath "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "org.junit.platform:junit-platform-gradle-plugin:1.0.1"
   }
 }
 
@@ -19,6 +20,7 @@ allprojects {
 configure(subprojects) {
   apply plugin: 'java'
   apply plugin: 'kotlin'
+  apply plugin: 'org.junit.platform.gradle.plugin'
   sourceCompatibility = 1.7
   compileJava {
     options.fork = true
