--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx512m
 org.gradle.configureondemand=true
-kotlinVersion=1.2.+
+kotlinVersion=1.2.21
 aiVersion=1.8.1
 squidLibVersion=f5a7f208
 squidLibUtilVersion=f5a7f208
