update for BurstAOE fix; playing with PanelEffects

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xms128m -Xmx512m
 org.gradle.configureondemand=true
 kotlinVersion=1.2.21
 aiVersion=1.8.1
-squidLibVersion=d71c6a87
-squidLibUtilVersion=d71c6a87
+squidLibVersion=c619757
+squidLibUtilVersion=c619757
 regExodusVersion=0.1.9
 gdxVersion=1.9.8
 jkVersion=2.9.0
