add the beginnings of Snake Fang Style
This adds the following skills to the Scoundrel:

* Cunning Snake Stance (adds atk, lowers dmg)
* Swift Fang Strike (deals more damage with lower ADL)
* Preparation (resets Snake Fang CDs)
* Poisoned Blades (grants the poison damage type as long as wielder has one bladed weapon)

--- a/assets/data/entity/creatures.yml
+++ b/assets/data/entity/creatures.yml
@@ -17,6 +17,7 @@
   ai: wolf
   tags:
   - wolf
+  - X-poison
 - id: alpha
   name: Alpha
   desc: A large wolf, usually seen at the head of a pack.
@@ -212,6 +213,11 @@
   - leader
   gainsXP: true
   xp: 300
+  skills:
+  - Cunning Snake Stance
+  - Swift Fang Strike
+  - Preparation
+  - Poisoned Blades
 - id: cleric
   name: Oathbound
   desc: An Oathbound, devoted to the Raven.
